# Vulkan-Playground

./: .gitignore  Doxyfile  LICENSE  README.md  llvm.ini  meson.build  meson_options.txt
.github/workflows/: build.yml
shaders/: mesh_basic.frag  mesh_basic.vert
src/: sys_interaction.h  vk_instance.c  vk_instance.h  vk_logical_device.c  vk_logical_device.h  vk_mem.h  vk_physical_device.h  vk_pipeline.c  vk_pipeline.h  vk_swapchain.c  vk_swapchain.h  vk_utils.c  vk_utils.h  vulkan_triangle.c  vulkan_triangle.h
src/OhMyVulkan/: vk_instance.c  vk_instance.h  vk_logical_device.c  vk_logical_device.h  vk_mem.c  vk_mem.h  vk_physical_device.c  vk_physical_device.h  vk_pipeline.c  vk_pipeline.h  vk_swapchain.c  vk_swapchain.h  vk_sync.c  vk_sync.h  vk_utils.h
src/SDL_UTILS/: SDL3_UTILS.c  SDL3_UTILS.h
src/playground/: vulkan_triangle.c  vulkan_triangle.h
src/playground/rust/vulkan_triangle/: Cargo.toml
src/playground/rust/vulkan_triangle/src/: main.rs
src/utils/: sys_interaction.c  sys_interaction.h
src/utils/SDL_UTILS/: SDL3_UTILS.c
